# zinc

./: .gitignore  CMakeLists.txt  Makefile  README.md  irc.cpp  ircpp.cpp  ircpp.hpp  main.cpp  zinc-server.cpp  zinc.cpp  zinc_config.cpp  zinc_config.hpp  zinc_noirc.cpp  zinc_zmq_pollhost.cpp  zinc_zmq_pollhost.hpp
include/: zmqservice.hpp
lib/libircclient-1.7/: CMakeLists.txt  build-release.sh
lib/libircclient-1.7/doc/sources/: Introduction.rst
lib/libircclient-1.7/examples/: irctest.c
lib/libircclient-1.7/include/: config.h.in
lib/libircclient-1.7/man/: libircclient.1
lib/simplejson/: CMakeLists.txt
megabrain/: megabrain.cpp
megabrain/megahal-9.1.1/: Makefile  main.c
megahal-9.1.1/: megahal.c  megahal.h
plugins/: CMakeLists.txt  test_plugin_host.cpp  zinc_dlfcn.cpp  zinc_plugin_host.cpp
plugins/include/: semantic_version  thunk_magic  zinc_channelio  zinc_dlfcn  zinc_interactive  zinc_interface  zinc_io  zinc_kernel  zinc_plugin  zinc_plugin_host  zinc_pollhost
plugins/irccmd/: irccmd_plugin.cpp
plugins/russian/: russian_plugin.cpp
plugins/sample/: sample_plugin.cpp
plugins/snacks/: snacks_plugin.cpp
